--- a/src/component/Box/Box.module.scss
+++ b/src/component/Box/Box.module.scss
@@ -4,6 +4,6 @@
   text-align:center;
   color:#ede9f9;
   font-weight:700;
-  background-color:green;
+  background-color:rgb(0, 81, 128);
   box-shadow:0px 2px 2px rgba(0,0,0,0.25);
 }
